--- a/custom_components/carddav_birthday_calendar/manifest.json
+++ b/custom_components/carddav_birthday_calendar/manifest.json
@@ -1,12 +1,16 @@
 {
   "domain": "carddav_birthday_calendar",
   "name": "CardDAV Birthday Calendar",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "config_flow": true,
   "documentation": "https://github.com/yourusername/ha-birthday-calendar",
   "issue_tracker": "https://github.com/yourusername/ha-birthday-calendar/issues",
-  "codeowners": ["@yourusername"],
-  "requirements": ["vobject==0.9.6.1", "aiohttp>=3.8.0"],
+  "codeowners": [
+    "@yourusername"
+  ],
+  "requirements": [
+    "caldav>=1.3.9"
+  ],
   "iot_class": "cloud_polling",
   "integration_type": "service"
 }
