--- a/custom_components/carddav_birthday_calendar/manifest.json
+++ b/custom_components/carddav_birthday_calendar/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "carddav_birthday_calendar",
   "name": "CardDAV Birthday Calendar",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "config_flow": true,
   "documentation": "https://github.com/yourusername/ha-birthday-calendar",
   "issue_tracker": "https://github.com/yourusername/ha-birthday-calendar/issues",
@@ -9,7 +9,7 @@
     "@yourusername"
   ],
   "requirements": [
-    "caldav>=1.3.9"
+    "aiohttp>=3.8.0"
   ],
   "iot_class": "cloud_polling",
   "integration_type": "service"
